logs/python-awips.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/awips'...
Listing './lib/python3.5/site-packages/awips/dataaccess'...
Listing './lib/python3.5/site-packages/awips/gfe'...
Listing './lib/python3.5/site-packages/awips/test'...
Listing './lib/python3.5/site-packages/awips/test/dafTests'...
Compiling './lib/python3.5/site-packages/awips/test/dafTests/testBinLightning.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testBinLightning.py", line 105
    geomData = self._runConstraintTest('source', '=', 1000L)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testBufrUa.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testBufrUa.py", line 112
    geometryData = self._runConstraintTest('reportType', '=', 2022L)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testClimate.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testClimate.py", line 243
    geometryData = self._runConstraintTest('avg_daily_max', '=', 70L)
                                                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testCommonObsSpatial.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testCommonObsSpatial.py", line 91
    geometryData = self._runConstraintTest('elevation', '=', 0L)
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testHydro.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testHydro.py", line 154
    geometryData = self._runConstraintTest('value', '=', 3L)
                                                          ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testMaps.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testMaps.py", line 137
    geometryData = self._runConstraintTest('reservoir', '=', 1L)
                                                              ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testRadar.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testRadar.py", line 110
    gridData = self._runConstraintTest('icao', '=', 1000L)
                                                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testRadarSpatial.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testRadarSpatial.py", line 85
    geometryData = self._runConstraintTest('immutablex', '=', 57L)
                                                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testSatellite.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testSatellite.py", line 91
    gridData = self._runConstraintTest('creatingEntity', '=', 1000L)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testSfcObs.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testSfcObs.py", line 85
    geometryData = self._runConstraintTest('reportType', '=', 1004L)
                                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/awips/test/dafTests/testWarning.py'...
***   File "./lib/python3.5/site-packages/awips/test/dafTests/testWarning.py", line 133
    geometryData = self._runConstraintTest('etn', '=', 1000L)
                                                           ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/dynamicserialize'...
Listing './lib/python3.5/site-packages/dynamicserialize/adapters'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/activetable'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/alertviz'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/auth'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/dataaccess'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/dataplugin'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/dataquery'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/datastorage'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/localization'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/management'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/message'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/plugin'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/pointdata'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/pypies'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/serialization'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/site'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/raytheon/uf/common/time'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/vividsolutions'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/vividsolutions/jts'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/com/vividsolutions/jts/geom'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/gov'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/gov/noaa'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/gov/noaa/nws'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/gov/noaa/nws/ncep'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/gov/noaa/nws/ncep/common'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/java'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/java/awt'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/java/lang'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/java/sql'...
Listing './lib/python3.5/site-packages/dynamicserialize/dstypes/java/util'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/python_awips-0.9.10.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/thrift'...
Listing './lib/python3.5/site-packages/thrift/protocol'...
Listing './lib/python3.5/site-packages/thrift/server'...
Listing './lib/python3.5/site-packages/thrift/transport'...
Listing './share'...
Listing './share/python-wheels'...
